Fixed About page padding and spacing
added spacing to table and padding to info

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -57,9 +57,18 @@ h3 {
   font-family: monospace;
 }
 
+p {
+  font-size: 16px;
+  padding: 2rem;
+  text-align: center;
+  font-size: larger;
+}
+
 table {
   font-weight: bold;
   font-family: monospace;
+  border-collapse: collapse;
+  width: 75%;
 }
 
 .web{
@@ -147,33 +156,9 @@ button {
           box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
 }
 
-button:hover {
-  /* lets the mouse appear as a hand when hovering over the button */
-  cursor: pointer;
-  /* reduces the opacity of the button to 80% */
-  opacity: .8;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-button:focus {
-  /* lets the mouse appear as a hand when hovering over the button */
-  cursor: pointer;
-  /* reduces the opacity of the button to 80% */
-  opacity: .8;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
-.button:hover {
-  /* lets the mouse appear as a hand when hovering over the button */
-  cursor: pointer;
-  /* reduces the opacity of the button to 80% */
-  opacity: .8;
-  -webkit-box-shadow: none;
-          box-shadow: none;
-}
-
+button:hover,
+button:focus,
+.button:hover,
 .button:focus {
   /* lets the mouse appear as a hand when hovering over the button */
   cursor: pointer;
@@ -182,6 +167,7 @@ button:focus {
   -webkit-box-shadow: none;
           box-shadow: none;
 }
+
 
 .button__secondary {
   background-color: #e0b354;
@@ -198,7 +184,16 @@ button:focus {
       -ms-flex: 0 1 200px;
           flex: 0 1 200px;
 }
+  /*
+  box-shadow: 4px 3px 19px 0px rgba(0, 0, 0, 0.3);
+}
 
+.logo:hover,
+.logo:focus {
+  opacity: .8;
+  box-shadow: none;
+}
+*/
 .navigation-list {
   list-style-position: outside;
 }
@@ -492,3 +487,4 @@ button:focus {
     font-size: 22px;
   }
 }
+
